--- a/index.html
+++ b/index.html
@@ -9,6 +9,21 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"
     integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="../../assets/vendor/aos/dist/aos.css" />
+
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"
+      integrity="sha512-A7AYk1fGKX6S2SsHywmPkrnzTZHrgiVT7GcQkLGDe2ev0aWb8zejytzS8wjo7PGEXKqJOrjQ4oORtnimIRZBtw=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css"
+      integrity="sha512-1cK78a1o+ht2JcaW6g8OXYwqpev9+6GqOkz9xmBN9iUUhIndKtxwILGWYOSibOKjLsEdjyjZvYDq/cZwNeak0w=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
 </head>
 
 <body>
@@ -44,32 +59,33 @@
 
   <!-- Main section -->
 
+  
   <section class="hero-split">
     <div class="hero-left">
-      <h1>
+      <h1 data-aos="zoom-in">
         Payments that move <span>at your speed</span>
       </h1>
-      <p>
+      <p data-aos="zoom-in">
         One platform to collect, track, and scale payments globally.
         Built for startups, creators, and fast-growing businesses.
       </p>
 
       <div class="hero-actions">
-        <button class="primary-btn">Start Free</button>
-        <button class="secondary-btn">View Demo</button>
+        <a href="./error.html" data-aos="zoom-in"><button class="primary-btn">Start Free</button></a>
+        <a href="./error.html" data-aos="zoom-in"><button class="secondary-btn">View Demo</button></a>
       </div>
     </div>
 
     <div class="hero-right">
-      <div class="stat-card">
+      <div class="stat-card" data-aos="zoom-in">
         <h2>₹12Cr+</h2>
         <p>Processed Monthly</p>
       </div>
-      <div class="stat-card">
+      <div class="stat-card" data-aos="zoom-in">
         <h2>99.99%</h2>
         <p>Uptime</p>
       </div>
-      <div class="stat-card">
+      <div class="stat-card" data-aos="zoom-in">
         <h2>150K+</h2>
         <p>Active Users</p>
       </div>
@@ -96,10 +112,10 @@
 
 
       <div class="about-left">
-        <h4>About Us</h4>
-        <h2>Shaping the Future of <span>Digital Payments</span></h2>
+        <h4 data-aos="fade-up">About Us</h4>
+        <h2 data-aos="fade-up">Shaping the Future of <span>Digital Payments</span></h2>
 
-        <p>
+        <p data-aos="fade-up">
           We build smart, secure, and scalable payment experiences designed
           to simplify how people manage money in the digital age.
           Our focus is creating intuitive solutions that help businesses
@@ -107,19 +123,19 @@
         </p>
 
         <div class="about-stats">
-          <div class="stat">
+          <div class="stat" data-aos="fade-up">
             <h3><span class="counter" data-target="99.9">0</span>%</h3>
             <p>System Uptime</p>
           </div>
 
-          <div class="stat">
+          <div class="stat" data-aos="fade-up">
             <h3><span class="counter" data-target="120">0</span>+</h3>
             <p>Global Partners</p>
           </div>
         </div>
       </div>
 
-      <div class="about-right">
+      <div class="about-right" data-aos="zoom-in">
         <img src="./image/tablet.webp" alt="Mobile Payment App">
       </div>
 
@@ -130,22 +146,22 @@
 
   <section class="product">
     <div class="product-header">
-      <h4>Product</h4>
-      <h2>Powerful AI Services <span>Tailored to You</span></h2>
-      <p>Powering your digital transformation with intelligent solutions.</p>
+      <h4 data-aos="zoom-in">Product</h4>
+      <h2 data-aos="zoom-in">Powerful AI Services <span>Tailored to You</span></h2>
+      <p data-aos="zoom-in">Powering your digital transformation with intelligent solutions.</p>
     </div>
 
     <div class="product-grid">
 
-      <!-- Large Feature -->
-      <div class="product-card large">
-        <h3>Sent Money Instantly</h3>
-        <p>
+      
+      <div class="product-card large" data-aos="zoom-in">
+        <h3 data-aos="fade-up">Sent Money Instantly</h3>
+        <p data-aos="fade-up">
           Transfer funds instantly to anyone, anywhere with advanced security
           features that protect every transaction you make today.
         </p>
 
-        <div class="rating">
+        <div class="rating" data-aos="fade-up">
           <span>4.9</span>
           <div class="stars">★★★★★</div>
           <small>Trusted by 5,600+ global users</small>
@@ -155,21 +171,21 @@
         <br>
         <br>
         <br>
-        <div class="product-card image">
+        <div class="product-card image" data-aos="fade-up">
           <img src="./image/stat.png" alt="Mobile Payment App">
         </div>
 
       </div>
 
       <!-- Image Card -->
-      <div class="product-card image">
+      <div class="product-card image" data-aos="zoom-in">
         <img src="./image/smartphone.svg" alt="Mobile Payment App">
       </div>
 
       <!-- Graph Card -->
-      <div class="product-card graph">
-        <h3>Track Financial Growth</h3>
-        <p>
+      <div class="product-card graph" data-aos="zoom-in">
+        <h3 data-aos="fade-up">Track Financial Growth</h3>
+        <p data-aos="fade-up">
           Monitor your income and expenses with detailed analytics designed
           for clarity and control.
           <br>
@@ -179,24 +195,24 @@
         </p>
 
         <div class="chart">
-          <span style="height: 40%"></span>
-          <span style="height: 65%"></span>
-          <span style="height: 85%"></span>
-          <span style="height: 55%"></span>
+          <span style="height: 40%" data-aos="fade-up"></span>
+          <span style="height: 65%" data-aos="fade-up"></span>
+          <span style="height: 85%" data-aos="fade-up"></span>
+          <span style="height: 55%" data-aos="fade-up"></span>
         </div>
       </div>
 
       <!-- Small Feature -->
-      <div class="product-card small">
-        <h3>Finance At Your Fingertips</h3>
-        <p>
+      <div class="product-card small" data-aos="zoom-in">
+        <h3 data-aos="fade-up">Finance At Your Fingertips</h3>
+        <p data-aos="fade-up">
           Stay connected to your money with our intuitive mobile interface.
         </p>
       </div>
 
       <!-- Small Feature -->
-      <div class="product-card small">
-        <h3>Multilingual & Global</h3>
+      <div class="product-card small" data-aos="zoom-in">
+        <h3 data-aos="fade-up">Multilingual & Global</h3>
         <p>
           Break language barriers and expand your reach with Paynex globally.
         </p>
@@ -210,9 +226,9 @@
 
   <section class="blog">
     <div class="blog-header">
-      <h4>Blog</h4>
-      <h2>Latest News & <span>Insights</span></h2>
-      <p>
+      <h4 data-aos="zoom-in">Blog</h4>
+      <h2 data-aos="zoom-in">Latest News & <span>Insights</span></h2>
+      <p data-aos="zoom-in">
         Stay informed with the latest updates, industry trends, and expert tips
         on digital payments and fintech innovation.
       </p>
@@ -221,7 +237,7 @@
     <div class="blog-grid">
 
       <!-- Blog Card 1 -->
-      <article class="blog-card">
+      <article class="blog-card" data-aos="zoom-in">
         <div class="blog-img">
           <img src="./image/startup.webp" alt="Startup Tips">
           <span class="tag">Startup Tips</span>
@@ -233,7 +249,7 @@
       </article>
 
       <!-- Blog Card 2 -->
-      <article class="blog-card">
+      <article class="blog-card" data-aos="zoom-in">
         <div class="blog-img">
           <img src="./image/analytics.webp" alt="Analytics">
           <span class="tag">Analytics</span>
@@ -245,7 +261,7 @@
       </article>
 
       <!-- Blog Card 3 -->
-      <article class="blog-card">
+      <article class="blog-card" data-aos="zoom-in">
         <div class="blog-img">
           <img src="./image/tech.webp" alt="Technology">
           <span class="tag">Technology</span>
@@ -263,14 +279,14 @@
 
   <section class="cta-light">
     <div class="cta-container">
-      <h2>Ready To Transform Your Payment Experience?</h2>
-      <p>
+      <h2 data-aos="fade-up">Ready To Transform Your Payment Experience?</h2>
+      <p data-aos="fade-up">
         Join thousands of businesses already using <strong>Stackly</strong>.
         Sign up today and start accepting payments in minutes with zero setup fees.
       </p>
-      <div class="cta-buttons">
-        <button class="primary-btn">Get Started</button>
-        <button class="secondary-btn">Download App</button>
+      <div class="cta-buttons" data-aos="fade-up">
+        <a href="./error.html"><button class="primary-btn">Get Started</button></a>
+        <a href="./error.html"><button class="secondary-btn">Download App</button></a>
       </div>
     </div>
   </section>
@@ -280,7 +296,6 @@
   <footer class="footer">
     <div class="footer-container">
 
-      <!-- Logo & Description -->
       <div class="footer-brand">
         <div class="logo-img">
 
@@ -291,7 +306,6 @@
         </p>
       </div>
 
-      <!-- Quick Links -->
       <div class="footer-links">
         <h4>Quick Links</h4>
         <ul>
@@ -302,10 +316,9 @@
         </ul>
       </div>
 
-      <!-- Contact -->
       <div class="footer-contact">
         <h4>Contact</h4>
-        <p>Email: support@paynex.com</p>
+        <p>Email: support@stackly.com</p>
         <p>Phone: +91 1234 567 890</p>
         <div class="footer-social">
           <a href="./error.html" target="_blank"><i class="fab fa-facebook-f"></i></a>
@@ -316,7 +329,6 @@
 
       </div>
 
-      <!-- Newsletter -->
       <div class="footer-newsletter">
         <h4>Subscribe</h4>
         <p>Get the latest updates and news from Paynex.</p>
@@ -329,7 +341,7 @@
     </div>
 
     <div class="footer-bottom">
-      <p>&copy; 2026 Paynex. All rights reserved.</p>
+      <p>&copy; 2026 Stackly. All rights reserved.</p>
     </div>
   </footer>
 
@@ -343,7 +355,7 @@
     const startCount = () => {
       counters.forEach(counter => {
         const target = +counter.dataset.target;
-        const speed = 180; // 🔥 higher = slower
+        const speed = 180; 
         const increment = target / speed;
 
         let count = 0;
@@ -397,6 +409,16 @@
     });
   });
 </script>
+
+<script>
+      // $(document).on('ready', function () {
+      // initialization of aos
+      AOS.init({
+        duration: 650,
+         once: false,
+        mirror:true,
+      });
+    </script>
 
 
 
