--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@
     <div class="nav-container">
 
       
-      <div class="logo-img"></div>
+      <div class="logo-img">
+       <a href=""> <img src="./image/logo-removebg-preview.webp" alt="logo-img"></a>
+      </div>
 
       
       <div class="menu-toggle" id="menuToggle">
@@ -298,7 +300,7 @@
 
       <div class="footer-brand">
         <div class="logo-img">
-
+          <a href=""><img src="./image/logo-removebg-preview.webp" alt=""></a>
         </div>
         <p>
           Paynex is a seamless, top-rated payment gateway empowering businesses
