--- a/index.html
+++ b/index.html
@@ -48,11 +48,12 @@
         <li><a href="./error.html">Features</a></li>
         <li><a href="./error.html">Pricing</a></li>
         <li><a href="./error.html">Security</a></li>
+        <li><a href="./error.html">Dashboard</a></li>
         <li><a href="./error.html">Contact</a></li>
       </ul>
 
       <div class="nav-btn">
-        <button>Dashboard</button>
+        <button>Login</button>
       </div>
 
 
